--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,30 +11,39 @@ SET(EXECUTABLE_OUTPUT_PATH ".")
 
 message("Boost program_options module is required to build this sample")
 
+SET(CUDA_VERSION "7.5")
+SET(OCV_VERSION "3.1")
+        
 IF(WIN32) # Windows
-SET(ZED_INCLUDE_DIRS $ENV{ZED_INCLUDE_DIRS})
-	if (CMAKE_CL_64) # 64 bits
-		SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_64})
-		SET(Boost_LIBRARY_DIRS $ENV{BOOST_LIBRARY_DIR_64})
-	else(CMAKE_CL_64) # 32 bits
-		message("32bits compilation is no more available with CUDA7.0")
-	endif(CMAKE_CL_64)
-SET(ZED_LIBRARY_DIR $ENV{ZED_LIBRARY_DIR})
-SET(Boost_INCLUDE_DIRS $ENV{BOOST_INCLUDE_DIRS})
-SET(OPENCV_DIR $ENV{OPENCV_DIR})
+    SET(ZED_INCLUDE_DIRS $ENV{ZED_INCLUDE_DIRS})
+    SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_64})
+	SET(Boost_LIBRARY_DIRS $ENV{BOOST_LIBRARY_DIR_64})
+    SET(Boost_INCLUDE_DIRS $ENV{BOOST_INCLUDE_DIRS})
+    SET(ZED_LIBRARY_DIR $ENV{ZED_LIBRARY_DIR})
+    SET(OPENCV_DIR $ENV{OPENCV_DIR})
+    SET(EIGEN3_INCLUDE_DIR $ENV{EIGEN_DIR})
 ELSE() # Linux
-find_package(ZED 0.9 REQUIRED)
-find_package(Boost COMPONENTS program_options REQUIRED)
+    find_package(ZED 1.0 REQUIRED)
+    find_package(Eigen3 REQUIRED)
+    find_package(Boost COMPONENTS program_options REQUIRED)
+
+    ##For Jetson, OpenCV4Tegra is based on OpenCV2.4
+    exec_program(uname ARGS -p OUTPUT_VARIABLE CMAKE_SYSTEM_NAME2)
+    if ( CMAKE_SYSTEM_NAME2 MATCHES "aarch64" OR CMAKE_SYSTEM_NAME2 MATCHES "armv7l" )
+        SET(OCV_VERSION "2.4")
+        SET(CUDA_VERSION "")
+    endif()
 ENDIF(WIN32)
 
-find_package(CUDA REQUIRED)
-find_package(OpenCV 2.4 COMPONENTS core highgui imgproc REQUIRED)
+find_package(OpenCV ${OCV_VERSION} COMPONENTS core highgui imgproc REQUIRED)
+find_package(CUDA ${CUDA_VERSION} REQUIRED)
 
 include_directories(${CUDA_INCLUDE_DIRS})
 include_directories(${ZED_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${EIGEN3_INCLUDE_DIR})
 
 link_directories(${ZED_LIBRARY_DIR})
 link_directories(${CUDA_LIBRARY_DIRS})
