--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,35 +9,39 @@ endif(COMMAND cmake_policy)
 
 SET(EXECUTABLE_OUTPUT_PATH ".")
 
-SET(CUDA_VERSION "7.5")
-SET(OCV_VERSION "3.1")
-        
+SET(VERSION_REQ_OCV "3.1")
+SET(SPECIAL_OS_LIBS "")
+SET(VERSION_REQ_CUDA "8.0")
+
+
 IF(WIN32) # Windows
     SET(ZED_INCLUDE_DIRS $ENV{ZED_INCLUDE_DIRS})
     SET(ZED_LIBRARIES $ENV{ZED_LIBRARIES_64})
     SET(ZED_LIBRARY_DIR $ENV{ZED_LIBRARY_DIR})
     SET(OPENCV_DIR $ENV{OPENCV_DIR})
     SET(EIGEN3_INCLUDE_DIR $ENV{EIGEN_DIR})
-ELSE() # Linux
-    find_package(ZED 1.0 REQUIRED)
+ ELSE() # Linux
+    find_package(ZED REQUIRED)
     find_package(Eigen3 REQUIRED)
 
-    ##For Jetson, OpenCV4Tegra is based on OpenCV2.4
-    exec_program(uname ARGS -p OUTPUT_VARIABLE CMAKE_SYSTEM_NAME2)
-    if ( CMAKE_SYSTEM_NAME2 MATCHES "aarch64" OR CMAKE_SYSTEM_NAME2 MATCHES "armv7l" )
-        SET(OCV_VERSION "2.4")
-        SET(CUDA_VERSION "")
-    endif()
+##For Jetson, OpenCV4Tegra is based on OpenCV2.4
+     exec_program(uname ARGS -p OUTPUT_VARIABLE CMAKE_SYSTEM_NAME2)
+     if ( CMAKE_SYSTEM_NAME2 MATCHES "aarch64" OR CMAKE_SYSTEM_NAME2 MATCHES "armv7l" )
+	SET(VERSION_REQ_OCV "2.4")
+	SET(VERSION_REQ_CUDA "")
+     endif()
+     SET(SPECIAL_OS_LIBS "pthread")
 ENDIF(WIN32)
-
-find_package(OpenCV ${OCV_VERSION} COMPONENTS core highgui imgproc REQUIRED)
-find_package(CUDA ${CUDA_VERSION} REQUIRED)
-
+ 
+find_package(OpenCV ${VERSION_REQ_OCV} REQUIRED)
+find_package(CUDA ${VERSION_REQ_CUDA} REQUIRED)
+ 
 include_directories(${CUDA_INCLUDE_DIRS})
 include_directories(${ZED_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 
 link_directories(${ZED_LIBRARY_DIR})
 link_directories(${CUDA_LIBRARY_DIRS})
@@ -49,13 +53,12 @@ FILE(GLOB_RECURSE SRC_FILES "${SRC_FOLDER}/*.cpp")
 ADD_EXECUTABLE(${execName} ${SRC_FILES})
 set_property(TARGET ${execName} PROPERTY OUTPUT_NAME "ZED Save depth")
 
-add_definitions(-std=c++0x)# -m64) #-Wall)
+add_definitions(-std=c++0x -g -O3)
 
 # Add the required libraries for linking:
 TARGET_LINK_LIBRARIES(${execName}
+			${SPECIAL_OS_LIBS}
                         ${ZED_LIBRARIES}
                         ${OpenCV_LIBS}
                         ${CUDA_LIBRARIES} ${CUDA_npps_LIBRARY} ${CUDA_nppi_LIBRARY}
                     )
-
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3" ) # Release Perf mode
