Fix cannot find '-lopencv_dep_cudart' Jetson

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ IF(WIN32) # Windows
      if ( CMAKE_SYSTEM_NAME2 MATCHES "aarch64" OR CMAKE_SYSTEM_NAME2 MATCHES "armv7l" )
 	SET(VERSION_REQ_OCV "2.4")
 	SET(VERSION_REQ_CUDA "")
+	SET(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
      endif()
      SET(SPECIAL_OS_LIBS "pthread")
 ENDIF(WIN32)
